[GStreamer] fullscreen video pause/play fails https://bugs.webkit.org/show_bug.cgi?id=66936

Reviewed by Martin Robinson.

Don't use the identity element to avoid painting of the in-window
video. Instead simply make the sink aware of the fullscreen state
and ignore buffers if fullscreen and autovideosink are
active. Also fixed two deadlocks happening when a paused pipeline
is switched to fullscreen and when fullscreen is disabled for a
paused pipeline.

* platform/graphics/gstreamer/GStreamerGWorld.cpp:
(WebCore::GStreamerGWorld::enterFullscreen):
(WebCore::GStreamerGWorld::exitFullscreen):
* platform/graphics/gstreamer/GStreamerGWorld.h:
(WebCore::GStreamerGWorld::isFullscreen):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::createGSTPlayBin):
* platform/graphics/gstreamer/VideoSinkGStreamer.cpp:
(webkit_video_sink_render):
(webkit_video_sink_new):
* platform/graphics/gstreamer/VideoSinkGStreamer.h:

Canonical link: https://commits.webkit.org/85077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96310 268f45cc-cd09-0410-ab3c-d52691b4dbfc